# RAG_STUDY

./: .gitignore  README.md  start_guide.txt
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  schemas.py
backend/app/core/: chroma.py  config.py  pdf_utils.py
backend/app/routers/: chat.py  documents.py  health.py
backend/app/services/: ingestion.py  ollama.py  reranking.py  retrieval.py  state.py
frontend/: package-lock.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Sidebar.jsx
frontend/src/components/chat/: ChatPanel.jsx  MessageList.jsx
frontend/src/components/sidebar/: DocumentList.jsx  StatusCards.jsx  UploadPanel.jsx
frontend/src/lib/: api.js
