[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.115.0",
    "pypdf>=6.11.0",
    "sentence-transformers>=5.5.0",
    "uvicorn>=0.30.0",
    "torch==2.6.0+cu124",
    "python-multipart>=0.0.29",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
